docs/book/samples/appc/needless_wrap_check.out
error[formatting]: needless continuation: this statement fits on one line (34 characters)
  --> needless_wrap_check.kso:3:5
   3 |     . sum
           ^
